--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,38 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.red {
+  color: #f00;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.green {
+  color: #0f0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.movie-poster{
+   height:240px;
+   width:200px;
+   object-fit: cover;
+}
+.movie-specs{
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
-
-.App-link {
-  color: #61dafb;
+.movie-container{
+  width: 340px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user-name{
+  font-size: 25px;
+}
+.movie-summary{
+  font-size: 10px;
+}
+.movie-list{
+  display:grid;
+  grid-template-columns: repeat(auto-fit, minmax(340px,1fr));
+  gap: 1rem;
+  justify-items: center;
+}
+body{
+  margin: 24px;
 }
